fix profile picture

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
         <img src="resources/images/Seth.jpeg" alt="Seth Gerberding Headshot">
 
         <!-- Name and Title -->
-        <div>
+        <div class="profile-text">
             <h1>Seth Gerberding</h1>
             <p class="title"><strong>Mathematics Ph.D. Student at Texas A&M University</strong></p>
+            <p>
+                Welcome! I’m a Ph.D. student focused on numerical analysis, finite element methods,
+                and conservation laws. This site showcases my research, software, publications, and
+                professional activities.
+            </p>
         </div>
     </div>
 
