working on image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Writings & Projects | Seth Gerberding</title>
+    <title>Homepage | Seth Gerberding</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
         <!-- Profile Section with Headshot -->
         <div class="profile">
             <!-- Headshot -->
-            <!-- <img src="resources/images/Seth.jpeg" alt="Seth Gerberding Headshot"> -->
+            <img src="resources/images/Seth.jpeg" alt="Seth Gerberding Headshot" class="profile-image">
 
             <!-- Name and Title -->
             <div class="profile-text">
