--- a/cv.html
+++ b/cv.html
@@ -178,7 +178,10 @@
                 <ul>
                     <li>
                         Seth Gerberding, Jeff Peterson, Jim Ferguson, Scott Ramsey.
-                        <em>Semi-Analytic Solutions to the Noh Problem with a Black Box Equation of State.</em>
+                        <a href="https://pubs.aip.org/aip/pof/article/38/1/016113/3377188/Semi-analytic-solutions-to-the-Noh-problem-with-a"
+                            target="_blank" rel="noopener">
+                            <em>Semi-Analytic Solutions to the Noh Problem with a Black Box Equation of State.</em>
+                        </a>.
                         <em>Physics of Fluids</em> 1 January 2026; 38 (1): 016113.
                         (<a href="https://arxiv.org/abs/2509.16766" target="_blank" rel="noopener">arXiv preprint</a>)
                     </li>
@@ -189,15 +192,17 @@
                             <em>A High-Order IMEX Method for Generalized Korteweg–De Vries Equations</em>
                         </a>.
                         <em>Journal of Computational and Applied Mathematics</em> 475 (2026).
-                        doi: <a href="https://doi.org/10.1016/j.cam.2025.116991" target="_blank"
-                            rel="noopener">(reprint)</a>
+                        <a href="resources/Gerberding_KdV.pdf" target="_blank" rel="noopener">(arXiv preprint)</a>
                     </li>
                     <li> Seth Gerberding, Nida Obatake, Anne Shiu. <a
                             href="https://www.tandfonline.com/doi/epdf/10.1080/03081087.2020.1812497?needAccess=true"
                             target="_blank" rel="noopener">>
                             <em>Identifiability of linear compartmental models: the effect ofmoving inputs, outputs, and
                                 leaks</em>.
-                        </a> <em>Linear and Multilinear Algebra.</em> 70 (no. 14) 2022, 2765–2787 </li>
+                        </a> <em>Linear and Multilinear Algebra.</em> 70 (no. 14) 2022, 2765–2787. (<a
+                            href="resources/Gerberding_Obatake_Shiu_22_arxiv.pdf" target="_blank" rel="noopener">arXiv
+                            preprint</a>)
+                    </li>
                 </ul>
             </div>
 
